--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - python >=3.6
   run:
     - attrs >=19.3,<21
+    - mdit-py-plugins >=0.2.1,<0.3.0
     - python >=3.6
 
 test:
