--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
   run:
     - attrs >=19.3,<21
     - python >=3.6
-    - typing_extensions >=3.6.4  # [py<38]
+    - typing_extensions >=3.6.4
 
 test:
   requires:
