--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,11 +18,11 @@ build:
 
 requirements:
   host:
+    - python >=3.7
     - pip
-    - python >=3.6
+    - flit-core >=3.4,<4
   run:
-    - attrs >=19.3,<22
-    - python >=3.6
+    - python >=3.7
     - mdurl >=0.1,<1
     - typing_extensions >=3.7.4
 
